--- a/about.html
+++ b/about.html
@@ -113,19 +113,10 @@
                     <h1 class="text-center">
                         Tirages aléatoires équilibrés
                     </h1>
-
-                    <div class="row">
-                        <div class="col-sm-6 text-center">
-                            <img src="images/level-draw172f.png" alt="Level random">
-                            <div class="padding-bloc">
-                                <h2>Niveau</h2>
-                                <p>
-                                    Attribuez une note allant de 1 à 5 à vos participants et obtenez des équipes
-                                    aleatoires équilibrées.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    <p class="text-center">
+                        Attribuez une note allant de 1 à 5 à vos participants et obtenez des équipes
+                        aleatoires équilibrées.
+                    </p>
                     <div class="row text-center padding-bloc">
                         <div class="col-sm-3">
                             <span>
@@ -271,7 +262,7 @@
                             <i class="fa fa-flask"></i>
                             <h3>Critères</h3>
                             <p>
-                                Équipes équilibrées, groupes mixtes. Profitez de la puissance de nos algorithmes.
+                                Équipes équilibrées, profitez de la puissance de nos algorithmes.
                             </p>
                         </div>
 
@@ -301,17 +292,6 @@
                                 Partagez directement vos tirages sur Facebook, Twitter et Reddit.
                             </p>
                         </div>
-
-                        <div class="col-sm-4">
-                            <i class="fa fa-file-excel-o"></i>
-                            <h3>Exporter</h3>
-                            <p>
-                                Exportez vos équipes et groupes sous format Excel.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="row text-center padding-bloc-small">
 
                         <div class="col-sm-4">
                             <i class="fa fa-list"></i>
@@ -352,8 +332,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
-    <script src="https://bonballon.netlify.app/js/routing"></script>
+    <script src="js/routing.json"></script>
     <script src="js/main.js"></script>  
 
 </body>
