--- a/features.html
+++ b/features.html
@@ -76,8 +76,6 @@
                         <div class="col-md-6">
                             <h2>Partager les résultats</h2>
                             <ul class="list-unstyled padding-bloc">
-                                <li>partager sur les réseaux sociaux : Facebook, Twitter et Whatsapp</li>
-                                <li>exporter les résultats d&#039;un tirage sous forme de fichier Excel</li>
                                 <li>communiquer un tirage grâce à son lien unique (URL)</li>
                                 <li>intégrer facilement un tirage à un site Internet</li>
                                 <li>commenter le résultat d&#039;un tirage</li>
@@ -118,7 +116,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="text-center home-features-button">
-                            <a class="btn orange-btn large-keamk-btn" href="#">Contact</a>
+                            <a class="btn orange-btn large-keamk-btn" href="contact.html">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -147,8 +145,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
-    <script src="https://bonballon.netlify.app/js/routing"></script>
+    <script src="js/routing.json"></script>
     <script src="js/main.js"></script> 
 
 </body>
