--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" dir="ltr">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
+    <meta name="theme-color" content="#23468C">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Bonballon">
+    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700%7CMontserrat' rel='stylesheet'
+        type='text/css'>
+
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="all" />
+
+    <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
+
 </head>
+
 <body>
-    
+    <!-- Static navbar -->
+    <header class="navbar navbar-custom nav-bar-default navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo Bonballon"></a>
+            </div>
+            <nav id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
+                    <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="main-container">
+        <div class="bg-dark-grey">
+            <div class="container padding-bloc">
+                <h1 id="contact-title" class="text-center text-white">Contactez-nous</h1>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row contact-section">               
+                <div class="col-md-6">
+                    <div class="contact-form">
+                        <h3><i class="fa fa-paper-plane"></i> Envoyez-nous un message</h3>
+                        <form id="contactForm">
+                            <div class="form-group">
+                                <label for="name">Nom</label>
+                                <input type="text" class="form-control" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-paper-plane"></i> Envoyer
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="contact-info">                       
+                        <h3 class="mt-4"><i class="fa fa-info-circle"></i> À propos</h3>
+                        <p>Bonballon est une application web gratuite qui vous permet de créer des équipes équilibrées pour vos activités sportives.</p>
+                        
+                        <div class="social-links mt-4">
+                            <h3><i class="fa fa-share-alt"></i> Suivez-nous</h3>
+                            <a href="#" class="social-link"><i class="fa fa-facebook"></i></a>
+                            <a href="#" class="social-link"><i class="fa fa-twitter"></i></a>
+                            <a href="#" class="social-link"><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-second padding-bloc">
+            <div class="container text-center k-font-14">
+                <p>&copy; 2024 Bonballon</p>
+                <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Button to scroll to top -->
+    <div class="scroll-to-top">
+        <i class="fa fa-angle-up"></i>
+    </div>
+
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery/1.11.3/jquery.min.js"></script>
+    <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/pwa.js"></script>
+
 </body>
 </html>
