--- a/features.html
+++ b/features.html
@@ -5,10 +5,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
-
-    <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
+    <meta name="theme-color" content="#23468C">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Bonballon">
+    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
     <!-- Latest compiled and minified CSS -->
@@ -19,6 +22,8 @@
         type='text/css'>
 
     <link type="text/css" rel="stylesheet" href="css/style.css" media="all" />
+
+    <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
 
 </head>
 
@@ -39,9 +44,9 @@
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="about.html">A propos</a></li>
-                    <li><a href="features.html">Fonctionnalités</a></li>
+                    <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
+                    <li><a href="features.html"><i class="fa fa-cogs"></i> Fonctionnalités</a></li>
                 </ul>
             </nav>
         </div>
@@ -145,8 +150,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/routing.json"></script>
     <script src="js/main.js"></script> 
+    <script src="js/pwa.js"></script>
 
 </body>
 
