--- a/results.html
+++ b/results.html
@@ -43,9 +43,9 @@
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="about.html">A propos</a></li>
-                    <li><a href="features.html">Fonctionnalités</a></li>
+                    <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
+                    <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
         </div>
