--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <div class="col-md-6">
                     <div class="contact-form">
                         <h3><i class="fa fa-paper-plane"></i> Envoyez-nous un message</h3>
-                        <form id="contactForm">
+                        <form id="contactForm" action="https://formsubmit.co/xav.robart@gmail.com" method="post">
                             <div class="form-group">
                                 <label for="name">Nom</label>
                                 <input type="text" class="form-control" id="name" name="name" required>
