modif page history

--- a/history.html
+++ b/history.html
@@ -54,7 +54,7 @@
     <div class="main-container">
         <div class="bg-dark-grey">
             <div class="container padding-bloc-result">
-                <h1 class="text-center text-white"><i class="fa fa-history"></i> Historique des tirages</h1>
+                <h1 class="text-center text-white history-title">Historique des tirages</h1>
             </div>
         </div>
 
