--- a/history.html
+++ b/history.html
@@ -44,6 +44,7 @@
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="competition.html"><i class="fa fa-trophy"></i> Compétition</a></li>
                     <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
                     <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
                 </ul>
@@ -60,6 +61,21 @@
 
         <div class="container">
             <div class="margin-top-20 margin-bottom-20">
+                <!-- Section Évolution des écarts-types -->
+                <div class="row" id="stddev-section" style="display: none; margin-bottom: 40px;">
+                    <div class="col-md-12">
+                        <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                            <h3 class="text-center">
+                                <i class="fa fa-chart-line"></i> Évolution de l'équilibrage des tirages
+                            </h3>
+                            <p class="text-center text-muted">
+                                Historique des écarts-types (plus c'est bas, mieux c'est équilibré)
+                            </p>
+                            <canvas id="stddev-chart" style="max-height: 300px;"></canvas>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="text-right margin-bottom-10">
@@ -100,8 +116,10 @@
         <i class="fa fa-angle-up"></i>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="js/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/stats.js"></script>
     <script src="js/history.js"></script>
     <script src="js/pwa.js"></script>
 
