--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="history.html"><i class="fa fa-history"></i> Historique</a></li>
+                    <li><a href="competition.html"><i class="fa fa-trophy"></i> Compétition</a></li>
                     <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
                     <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
                 </ul>
@@ -55,7 +57,7 @@
     <div class="main-container">
         <div id="about-title" class="bg-dark-grey">
             <div class="container padding-bloc">
-                <h2 id="about-title" class="text-center text-white">A propos</h2>
+                <h2 id="about-title" class="text-center text-white"><i class="fa fa-info-circle"></i> A propos</h2>
             </div>
         </div>
 
@@ -295,7 +297,7 @@
     <footer>
         <div class="footer-second padding-bloc">
             <div class="container text-center k-font-14">
-                <p>&copy; 2023 Bonballon</p>
+                <p>&copy; 2025 Bonballon</p>
                 <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
             </div>
         </div>
