--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
     <div class="main-container">
         <div class="bg-dark-grey">
             <div class="container padding-bloc-result">
-                <h1 class="text-center text-white history-title">Historique des tirages</h1>
+                <h2 class="text-center text-white history-title"><i class="fa fa-history"></i> Historique des tirages</h2>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
     <footer>
         <div class="footer-second padding-bloc">
             <div class="container text-center k-font-14">
-                <p>&copy; 2023 Bonballon</p>
+                <p>&copy; 2025 Bonballon</p>
                 <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
             </div>
         </div>
