page results ajustement

--- a/results.html
+++ b/results.html
@@ -63,7 +63,7 @@
     <div class="main-container">
         <div class="bg-dark-grey">
             <div class="container padding-bloc-result">
-                <h1 id="draw-title" class="text-center text-white"></h1>
+                <h2 id="draw-title" class="text-center text-white"><i class="fa fa-trophy"></i></h2>
             </div>
         </div>
 
