--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,8 @@
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html"><i class="fa fa-home"></i> Accueil</a></li>
+                    <li><a href="competition.html"><i class="fa fa-trophy"></i> Compétition</a></li>
+                    <li><a href="history.html"><i class="fa fa-history"></i> Historique</a></li>
                     <li><a href="about.html"><i class="fa fa-info-circle"></i> A propos</a></li>
                     <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
                 </ul>
@@ -53,7 +55,7 @@
     <div class="main-container">
         <div class="bg-dark-grey">
             <div class="container padding-bloc">
-                <h1 id="contact-title" class="text-center text-white">Contactez-nous</h1>
+                <h2 id="contact-title" class="text-center text-white"><i class="fa fa-envelope"></i> Contactez-nous</h2>
             </div>
         </div>
 
@@ -82,7 +84,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="contact-info">                       
+                    <div class="contact-info">
+                        <img src="images/logo.png" alt="Logo Bonballon">               
                         <h3 class="mt-4"><i class="fa fa-info-circle"></i> À propos</h3>
                         <p>Bonballon est une application web gratuite qui vous permet de créer des équipes équilibrées pour vos activités sportives.</p>
                         
