--- a/history.html
+++ b/history.html
@@ -121,6 +121,7 @@
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/stats.js"></script>
     <script src="js/history.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/pwa.js"></script>
 
 </body>
