--- a/results.html
+++ b/results.html
@@ -155,6 +155,7 @@
     <script src="js/competition.js"></script>
     <script src="js/stats.js"></script>
     <script src="js/results.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/pwa.js"></script>
 
 </body>
