--- a/competition.html
+++ b/competition.html
@@ -174,6 +174,7 @@
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/competition.js"></script>
     <script src="js/competition-ui.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/pwa.js"></script>
 
 </body>
