modif page competition

--- a/competition.html
+++ b/competition.html
@@ -54,17 +54,19 @@
         </div>
     </header>
 
+    <!-- Bannière titre -->
+    <div class="bg-dark-grey">
+        <div class="container padding-bloc">
+            <h2 class="text-center text-white competition-title"><i class="fa fa-trophy"></i> Mode Compétition</h2>
+            <p class="text-center" style="color: #ccc; margin-top: 10px;">Suivez les performances de vos équipes et consultez l'historique des matchs</p>
+        </div>
+    </div>
+
     <div class="bg-grey">
         <div class="container padding-bloc">
-            <div class="row">
-                <div class="col-md-12 competition-banner">
-                    <h2 class="text-center competition-title"><i class="fa fa-trophy"></i> Mode Compétition</h2>
-                    <p class="text-center competition-text">Suivez les performances de vos équipes et consultez l'historique des matchs</p>
-                </div>
-            </div>
 
             <!-- Statistiques globales -->
-            <div class="row" style="margin-top: 30px;">
+            <div class="row">
                 <div class="col-md-4">
                     <div class="stats-card">
                         <div class="stats-number" id="total-matches">0</div>
